<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<data>
    <variable
        name="bindingViewmodel"
        type="com.example.recruitmenttest.InfoFragment" />
</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/access_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/access_group_name"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/access_group_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/access_group_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/access_group_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/access_group_id"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/access_group_name" />
        <TextView
            android:id="@+id/access_group_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/access_group_id"
            app:layout_constraintTop_toBottomOf="@+id/access_group_name" />

        <TextView
            android:id="@+id/total_uses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/total_uses"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/access_group_id" />
        <TextView
            android:id="@+id/total_uses_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/total_uses"
            app:layout_constraintTop_toBottomOf="@+id/access_group_id" />
        <TextView
            android:id="@+id/sessions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sessions"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_uses" />
        <TextView
            android:id="@+id/sessions_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/sessions"
            app:layout_constraintTop_toBottomOf="@+id/total_uses" />
        <TextView
            android:id="@+id/sessions_text_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/sessions"
            app:layout_constraintTop_toBottomOf="@+id/sessions_text_name" />
        <TextView
            android:id="@+id/event_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/event_id"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sessions_text_id" />
        <TextView
            android:id="@+id/event_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/event_id"
            app:layout_constraintTop_toBottomOf="@+id/sessions_text_id" />
        <TextView
            android:id="@+id/structure_decode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/structure_decode"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_id" />
        <TextView
            android:id="@+id/structure_decode_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/structure_decode"
            app:layout_constraintTop_toBottomOf="@+id/event_id" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/structure_decode" />
        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/structure_decode" />
        <TextView
            android:id="@+id/modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/modified"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />
        <TextView
            android:id="@+id/modified_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/modified"
            app:layout_constraintTop_toBottomOf="@+id/name" />
        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/id"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modified" />
        <TextView
            android:id="@+id/id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/id"
            app:layout_constraintTop_toBottomOf="@+id/modified" />
        <TextView
            android:id="@+id/basic_product_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/basic_product_id"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id" />

        <TextView
            android:id="@+id/basic_product_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/basic_product_id"
            app:layout_constraintTop_toBottomOf="@+id/id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>